# open-imagilib

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: font.txt  font_to_python.py  image_to_text.py  olympics.txt
open_imagilib/: animation.py  colors.py  emulator.py  fonts.py  matrix.py  renderer.py
open_imagilib/image/: compressor.py  decompressor.py
programs/: arkanoid.py  chessboard.py  fluid.py  gradient.py  hsv_spiral.py  mandelbrot.py  olympics.py  olympics2.py  tunnel_vision.py
tests/: helpers.py  test_animation.py  test_basics.py  test_image_compression.py
tests/reference/: olympics.txt  olympics2.txt
